--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,41 @@
     <meta name="Referrer" content="origin"/>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="apple-mobile-web-app-title" content="이주연 포트폴리오" />
+    <meta name="apple-mobile-web-app-title" content="이주연 포트폴리오"/>
     <meta name="robots" content="index,nofollow"/>
     <meta name="description" content="이주연 퍼블리싱 포트폴리오"/>
     <meta name="keywords" content="이주연 퍼블리싱 포트폴리오"/>
+    <meta property="og:url" content="https://janie-0919.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="이주연 포트폴리오" />
+    <meta property="og:description" content="이주연 퍼블리싱 포트폴리오" />
+    <meta property="og:image" content="dist/img/og-image.png" />
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Juyeon Portfolio</title>
     <link type="text/css" rel="stylesheet" href="dist/css/style.css"/>
     <script src="dist/js/bundle.js"></script>
     <script src="dist/js/common.js"></script>
+    <title>이주연 포트폴리오</title>
 </head>
 <body>
 <div class="progress" id="progress"></div>
 <div id="wrap">
     <section class="section01">
-        <h1>section01</h1>
+        <!--        <img style="width: 100%; height: 100%;" class="bubble" src="dist/img/section-1-background.svg" alt="">-->
+        <svg style="position:absolute; left: 0; top: 0;" version="1.1" id="layer" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 500" xml:space="preserve">
+        <style type="text/css">
+            .st0 {
+                fill: rgba(255, 255, 255, .5);
+            }
+        </style>
+            <linearGradient id="svg" gradientUnits="userSpaceOnUse" x1="0" y1="95.2545" x2="495.82" y2="95.2545">
+            <stop offset="0" style="stop-color:#D0D4DD"/>
+                <stop offset="1" style="stop-color:#DCDBDB"/>
+        </linearGradient>
+            <path class="st0" d="M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7
+        c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2
+   c-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z"/>
+</svg>
     </section>
     <section class="section02">
         <h1>section02</h1>
@@ -35,22 +55,104 @@
     </section>
 </div>
 <script>
+    var myAnimation = anime({
+        targets: "#layer path",
+        d: [
+            'M639.86,0c-5.48,25.2-18.66,49.39-38.91,69.59c-39.95,39.84-106.2,62.95-171.17,59.7\n' +
+            '\tc-6.9-0.34-13.86-0.95-20.84-1.68c-36.5-3.79-73.69-10.7-106.43,1.11c-27.8,10.03-45.57,31.55-70.66,45.2\n' +
+            '\tc-32.82,17.86-76.99,20.78-115.17,11.25c-38.16-9.53-70.5-30.45-94.13-55.56C14.39,120.93,7.16,111.73,0,102.5V0H639.86z',
+            'M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7\n' +
+            '        c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2\n' +
+            '\tc-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z'
+        ],
+        easing: "easeOutQuad",
+        duration: 3000,
+        loop: true,
+        direction: "alternate",
+    });
+
     gsap.registerPlugin(ScrollTrigger);
+
     let SECTIONS = gsap.utils.toArray("section");
 
-    gsap.to(SECTIONS, {
-        xPercent: -100 * ( SECTIONS.length -1 ),
-        ease: "none",
-        scrollTrigger: {
-            trigger: '#wrap',
-            end: ()=> "+=" + document.querySelector("#wrap").offsetWidth,
-            pin: true,
-            scrub: 1,
-            snap: 1 / (SECTIONS.length -1),
-            value: 100,
-            onUpdate(self) {
-                return $('#progress').css('width', `${self.progress * 100}%`);
-            }
+    ScrollTrigger.matchMedia({
+        // desktop
+        "(min-width: 800px)": function() {
+            gsap.to(SECTIONS, {
+                xPercent: -100 * (SECTIONS.length - 1),
+                ease: "none",
+                scrollTrigger: {
+                    trigger: '#wrap',
+                    end: () => "+=" + document.querySelector("#wrap").offsetWidth,
+                    pin: true,
+                    scrub: 1,
+                    id: "my-id",
+                    snap: {
+                        snapTo: 1 / (SECTIONS.length - 1),
+                        duration: 0.1,
+                        ease: "power0",
+                    },
+                    value: 100,
+                    onUpdate(self) {
+                        let progress = self.progress;
+                        progress.toFixed(3);
+                        $('#progress').css('width', `${progress * 100}%`);
+
+                        if (self.progress < .2) {
+                            $('.section01').addClass('active').siblings().removeClass('active');
+                        }
+                        else if (self.progress > .2 && self.progress < .4) {
+                            $('.section02').addClass('active').siblings().removeClass('active');
+                        }
+                        else if (self.progress > .4 && self.progress < .6) {
+                            $('.section03').addClass('active').siblings().removeClass('active');
+                        }
+                        else if (self.progress > .6 && self.progress < .8) {
+                            $('.section04').addClass('active').siblings().removeClass('active');
+                        }
+                        else {
+                            $('.section05').addClass('active').siblings().removeClass('active');
+                        }
+                    }
+                },
+            });
+        },
+
+        // mobile
+        "(max-width: 799px)": function() {
+            gsap.utils.toArray("section").forEach((section, i) => {
+                ScrollTrigger.create({
+                    trigger: section,
+                    start: "top top",
+                    pin: true,
+                    pinSpacing: false,
+                });
+            });
+            ScrollTrigger.create({
+                snap: {
+                    snapTo: 1 / (SECTIONS.length - 1),
+                    duration: 0.1,
+                    ease: "power0"
+                },
+                onUpdate(self) {
+                    $('#progress').css('width', `${self.progress * 100}%`);
+                    if (self.progress < .2) {
+                        $('.section01').addClass('active').parent().siblings().children().removeClass('active');
+                    }
+                    else if (self.progress > .2 && self.progress < .4) {
+                        $('.section02').addClass('active').parent().siblings().children().removeClass('active');
+                    }
+                    else if (self.progress > .4 && self.progress < .6) {
+                        $('.section03').addClass('active').parent().siblings().children().removeClass('active');
+                    }
+                    else if (self.progress > .6 && self.progress < .8) {
+                        $('.section04').addClass('active').parent().siblings().children().children().removeClass('active');
+                    }
+                    else {
+                        $('.section05').addClass('active').parent().siblings().children().removeClass('active');
+                    }
+                },
+            });
         },
     });
 </script>
