main / profile section

--- a/src/index.html
+++ b/src/index.html
@@ -21,42 +21,157 @@
     <title>이주연 포트폴리오</title>
 </head>
 <body>
-<div class="progress" id="progress"></div>
+<div class="pagination-wrap">
+    <ul>
+        <li><span class="sr-only">1</span></li>
+        <li><span class="sr-only">2</span></li>
+        <li><span class="sr-only">3</span></li>
+        <li><span class="sr-only">4</span></li>
+        <li><span class="sr-only">5</span></li>
+    </ul>
+</div>
+<!--<div class="progress-wrap">-->
+<!--    <span class="progress" id="progress"></span>-->
+<!--</div>-->
 <div id="wrap">
-    <section class="section01">
-        <!--        <img style="width: 100%; height: 100%;" class="bubble" src="dist/img/section-1-background.svg" alt="">-->
-        <svg style="position:absolute; left: 0; top: 0;" version="1.1" id="layer" xmlns="http://www.w3.org/2000/svg"
-             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 500" xml:space="preserve">
-        <style type="text/css">
-            .st0 {
-                fill: rgba(255, 255, 255, .5);
-            }
-        </style>
-            <linearGradient id="svg" gradientUnits="userSpaceOnUse" x1="0" y1="95.2545" x2="495.82" y2="95.2545">
-            <stop offset="0" style="stop-color:#D0D4DD"/>
-                <stop offset="1" style="stop-color:#DCDBDB"/>
-        </linearGradient>
-            <path class="st0" d="M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7
-        c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2
-   c-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z"/>
-</svg>
+    <!-- s main -->
+    <section class="main">
+        <h2 class="sr-only">이주연 포트폴리오</h2>
+        <div class="inner">
+            <div class="main-bg">
+                <div class="overlay"></div>
+                <div class="bg"></div>
+            </div>
+            <div class="main-text">
+<!--                <svg version="1.1" id="bubble-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 500" xml:space="preserve">-->
+<!--            <linearGradient id="svg" gradientUnits="userSpaceOnUse" x1="0" y1="95.2545" x2="495.82" y2="95.2545">-->
+<!--                <stop offset="0" style="stop-color:#D0D4DD"/>-->
+<!--                <stop offset="1" style="stop-color:#DCDBDB"/>-->
+<!--            </linearGradient>-->
+<!--                    <path class="bubble-path-1" d="M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7 c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2 c-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z"/>-->
+<!--        </svg>-->
+<!--                <svg version="1.1" id="bubble-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 750 500" xml:space="preserve">-->
+<!--            <linearGradient id="svg" gradientUnits="userSpaceOnUse" x1="0" y1="95.2545" x2="495.82" y2="95.2545">-->
+<!--                <stop offset="0" style="stop-color:#D0D4DD"/>-->
+<!--                <stop offset="1" style="stop-color:#DCDBDB"/>-->
+<!--            </linearGradient>-->
+<!--                    <path class="bubble-path-1" d="M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7 c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2 c-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z"/>-->
+<!--        </svg>-->
+                <div class="box">
+                    <div class="title">Web Publisher, Markup Developer</div>
+                    <div class="title-lg" id="name">Juyeon Lee</div>
+                    <div class="title-sm">Thanks for stopping by.</div>
+                </div>
+            </div>
+        </div>
     </section>
-    <section class="section02">
-        <h1>section02</h1>
+    <!-- e main -->
+
+    <!-- s profile -->
+    <section class="profile">
+        <h2 class="sr-only">about me</h2>
+        <div class="inner">
+<!--            <div class="title">Juyeon's profile</div>-->
+            <div class="card-wrap">
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <i class="far fa-user"></i>
+                            <span class="title">Profile</span>
+                        </div>
+                        <div class="item-list">
+                            <ul>
+                                <li><span>name</span><span>Juyeon Lee (이주연)</span></li>
+                                <li><span>title</span><span>Web Publisher</span></li>
+                                <li><span>phone</span><span><a href="tel:010-7250-7379">010-7250-7379</a></span></li>
+                                <li><span>email</span><span><a href="mailto:janielee0919@gmail.com">janielee0919@gmail.com</a></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <i class="fas fa-fist-raised"></i>
+                            <span class="title">Strength</span>
+                        </div>
+                        <div class="text-item-list">
+                            <ul>
+                                <li>관련 전공자(정보통신과 졸업)</li>
+                                <li>웹/앱 서비스 퍼블리싱 및 구축, 유지보수 경험</li>
+                                <li>웹표준, 웹접근성, 크로스브라우징 이해</li>
+                                <li>반응형 웹과 모바일 환경 구축 경험</li>
+                                <li>React/ Vue 등 프론트엔드 프레임워크 활용/구축 경험</li>
+                                <li>기획/디자인/개발 등 타 부서와 커뮤니케이션 경험</li>
+                                <li>Wordpress 시스템에 대한 경험</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-header">
+                            <i class="fas fa-tools"></i>
+                            <span class="title">Develop & Design Tools / Service</span>
+                        </div>
+                        <div class="text-item-list">
+                            <ul>
+                                <li>HTML / CSS(SCSS, PCSS) / JavaScript(jQuery)</li>
+                                <li>Bootstrap & Bootstrap5</li>
+                                <li>Gulp</li>
+                                <li>Github,Gitlab</li>
+                                <li>SVN</li>
+                                <li>Wordpress</li>
+                                <li>Slack</li>
+                                <li>Figma</li>
+                                <li>Sketch</li>
+                                <li>Zeplin</li>
+                                <li>Photoshop , Illustrator</li>
+                                <li>IDE : Webstorm</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    <!-- e profile -->
+
+    <!-- s career 1-->
     <section class="section03">
         <h1>section03</h1>
     </section>
+    <!-- e career 1 -->
+
+    <!-- s career 2 -->
     <section class="section04">
         <h1>section04</h1>
     </section>
+    <!-- e career 2 -->
+
     <section class="section05">
         <h1>section05</h1>
     </section>
 </div>
 <script>
-    var myAnimation = anime({
-        targets: "#layer path",
+    anime({
+        targets: "#bubble-1 path",
+        d: [
+            'M639.86,0c-5.48,25.2-18.66,49.39-38.91,69.59c-39.95,39.84-106.2,62.95-171.17,59.7\n' +
+            '\tc-6.9-0.34-13.86-0.95-20.84-1.68c-36.5-3.79-73.69-10.7-106.43,1.11c-27.8,10.03-45.57,31.55-70.66,45.2\n' +
+            '\tc-32.82,17.86-76.99,20.78-115.17,11.25c-38.16-9.53-70.5-30.45-94.13-55.56C14.39,120.93,7.16,111.73,0,102.5V0H639.86z',
+            'M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7\n' +
+            '        c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2\n' +
+            '\tc-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z'
+        ],
+        easing: "easeOutQuad",
+        duration: 3000,
+        loop: true,
+        direction: "alternate",
+    });
+
+    anime({
+        targets: "#bubble-2 path",
         d: [
             'M639.86,0c-5.48,25.2-18.66,49.39-38.91,69.59c-39.95,39.84-106.2,62.95-171.17,59.7\n' +
             '\tc-6.9-0.34-13.86-0.95-20.84-1.68c-36.5-3.79-73.69-10.7-106.43,1.11c-27.8,10.03-45.57,31.55-70.66,45.2\n' +
@@ -94,24 +209,29 @@
                     },
                     value: 100,
                     onUpdate(self) {
-                        let progress = self.progress;
-                        progress.toFixed(3);
-                        $('#progress').css('width', `${progress * 100}%`);
+                        // let progress = self.progress;
+                        // progress.toFixed(3);
+                        // $('#progress').css('width', `${progress * 100}%`);
 
                         if (self.progress < .2) {
-                            $('.section01').addClass('active').siblings().removeClass('active');
+                            $('.main').addClass('active').siblings().removeClass('active');
+                            $('.pagination-wrap li').eq(0).addClass('active').siblings().removeClass('active');
                         }
                         else if (self.progress > .2 && self.progress < .4) {
                             $('.section02').addClass('active').siblings().removeClass('active');
+                            $('.pagination-wrap li').eq(1).addClass('active').siblings().removeClass('active');
                         }
                         else if (self.progress > .4 && self.progress < .6) {
                             $('.section03').addClass('active').siblings().removeClass('active');
+                            $('.pagination-wrap li').eq(2).addClass('active').siblings().removeClass('active');
                         }
                         else if (self.progress > .6 && self.progress < .8) {
                             $('.section04').addClass('active').siblings().removeClass('active');
+                            $('.pagination-wrap li').eq(3).addClass('active').siblings().removeClass('active');
                         }
                         else {
                             $('.section05').addClass('active').siblings().removeClass('active');
+                            $('.pagination-wrap li').eq(4).addClass('active').siblings().removeClass('active');
                         }
                     }
                 },
@@ -120,40 +240,55 @@
 
         // mobile
         "(max-width: 799px)": function() {
-            gsap.utils.toArray("section").forEach((section, i) => {
-                ScrollTrigger.create({
-                    trigger: section,
-                    start: "top top",
-                    pin: true,
-                    pinSpacing: false,
-                });
-            });
             ScrollTrigger.create({
-                snap: {
-                    snapTo: 1 / (SECTIONS.length - 1),
-                    duration: 0.1,
-                    ease: "power0"
-                },
+                trigger:"#wrap",
+                start:"top top",
+                end:"bottom bottom",
+                markers: false,
+                onEnter: self => console.log(self.isActive),
                 onUpdate(self) {
-                    $('#progress').css('width', `${self.progress * 100}%`);
+                    // let progress = self.progress;
+                    // progress.toFixed(3);
+                    // $('#progress').css('width', `${progress * 100}%`);
+
                     if (self.progress < .2) {
-                        $('.section01').addClass('active').parent().siblings().children().removeClass('active');
+                        $('.main').addClass('active').siblings().removeClass('active');
+                        $('.pagination-wrap li').eq(0).addClass('active').siblings().removeClass('active');
                     }
                     else if (self.progress > .2 && self.progress < .4) {
-                        $('.section02').addClass('active').parent().siblings().children().removeClass('active');
+                        $('.section02').addClass('active').siblings().removeClass('active');
+                        $('.pagination-wrap li').eq(1).addClass('active').siblings().removeClass('active');
                     }
                     else if (self.progress > .4 && self.progress < .6) {
-                        $('.section03').addClass('active').parent().siblings().children().removeClass('active');
+                        $('.section03').addClass('active').siblings().removeClass('active');
+                        $('.pagination-wrap li').eq(2).addClass('active').siblings().removeClass('active');
                     }
                     else if (self.progress > .6 && self.progress < .8) {
-                        $('.section04').addClass('active').parent().siblings().children().children().removeClass('active');
+                        $('.section04').addClass('active').siblings().removeClass('active');
+                        $('.pagination-wrap li').eq(3).addClass('active').siblings().removeClass('active');
                     }
                     else {
-                        $('.section05').addClass('active').parent().siblings().children().removeClass('active');
+                        $('.section05').addClass('active').siblings().removeClass('active');
+                        $('.pagination-wrap li').eq(4).addClass('active').siblings().removeClass('active');
                     }
-                },
+                }
             });
         },
+    });
+
+    $(document).ready(function() {
+        var maxHeight = 0;
+        $(".card-wrap .card").each(function() {
+            var h = parseInt($(this).css("height"));
+            if (maxHeight < h) {
+                maxHeight = h;
+            }
+        });
+        $(".card-wrap .card .card-inner").each(function() {
+            $(this).css({
+                height: maxHeight
+            });
+        });
     });
 </script>
 </body>
