* career page * colors changed * images added * popup (working)

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <script src="dist/js/common.js"></script>
     <title>이주연 포트폴리오</title>
 </head>
-<body>
+<body class="scrollOn">
 <div class="pagination-wrap">
     <ul>
         <li><span class="sr-only">1</span></li>
@@ -58,6 +58,11 @@
 <!--                    <path class="bubble-path-1" d="M495.82,0c-4.25,25.2-14.46,49.39-30.15,69.59c-30.96,39.84-82.29,62.95-132.64,59.7 c-5.35-0.34-10.74-0.95-16.15-1.68c-28.28-3.79-57.1-10.7-82.47,1.11c-21.54,10.03-35.31,31.55-54.75,45.2 c-25.43,17.86-59.66,20.78-89.24,11.25c-29.57-9.53-54.63-30.45-72.94-55.56C11.15,120.93,5.55,111.73,0,102.5V0H495.82z"/>-->
 <!--        </svg>-->
                 <div class="box">
+                    <div class="dots">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
                     <div class="title">Web Publisher, Markup Developer</div>
                     <div class="title-lg" id="name">Juyeon Lee</div>
                     <div class="title-sm">Thanks for stopping by.</div>
@@ -98,12 +103,12 @@
                         <div class="text-item-list">
                             <ul>
                                 <li>관련 전공자(정보통신과 졸업)</li>
-                                <li>웹/앱 서비스 퍼블리싱 및 구축, 유지보수 경험</li>
+                                <li>웹/앱/TV앱 서비스 퍼블리싱 구축 및 유지보수</li>
                                 <li>웹표준, 웹접근성, 크로스브라우징 이해</li>
-                                <li>반응형 웹과 모바일 환경 구축 경험</li>
-                                <li>React/ Vue 등 프론트엔드 프레임워크 활용/구축 경험</li>
+                                <li>반응형 웹/모바일 환경 구축 가능</li>
+                                <li>React/ Vue 등 프론트엔드 프레임워크 환경 구축 가능</li>
                                 <li>기획/디자인/개발 등 타 부서와 커뮤니케이션 경험</li>
-                                <li>Wordpress 시스템에 대한 경험</li>
+                                <li>Wordpress 시스템에 대한 이해 및 경험</li>
                             </ul>
                         </div>
                     </div>
@@ -117,14 +122,14 @@
                         <div class="text-item-list">
                             <ul>
                                 <li>HTML / CSS(SCSS, PCSS) / JavaScript(jQuery)</li>
-                                <li>Bootstrap & Bootstrap5</li>
                                 <li>Gulp</li>
+                                <li>Bootstrap & Bootstrap5</li>
                                 <li>Github,Gitlab</li>
                                 <li>SVN</li>
                                 <li>Wordpress</li>
+                                <li>AWS</li>
                                 <li>Slack</li>
                                 <li>Figma</li>
-                                <li>Sketch</li>
                                 <li>Zeplin</li>
                                 <li>Photoshop , Illustrator</li>
                                 <li>IDE : Webstorm</li>
@@ -138,22 +143,184 @@
     <!-- e profile -->
 
     <!-- s career 1-->
-    <section class="section03">
-        <h1>section03</h1>
+    <section class="career">
+        <h2 class="sr-only">career</h2>
+        <div class="inner">
+            <div class="year-info">
+                <div class="heading">more projects</div>
+                <div class="year">2019 - 2020</div>
+            </div>
+            <div class="work-list">
+                <ul>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">CUCKOO 관리자 웹페이지</span>
+                            <span class="year">2019.11 - 2020.2</span>
+                        </a>
+                        <div class="info">
+                            <div class="content">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">농협 First ePro</span>
+                            <span class="year">2020.3</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">LG헬로비전 아이들나라 2.0</span>
+                            <span class="year">2020.1 - 2020.3</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">MyPofol</span>
+                            <span class="year">2020.1</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">MyUI</span>
+                            <span class="year">2020.2</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">CGV 포토티켓</span>
+                            <span class="year">2020.5 - 2020.6</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">A-cha web</span>
+                            <span class="year">2020.11 - 2020.12</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">신세계 스마트밴딩</span>
+                            <span class="year">2020.9 - 2020.10</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">홈런 마켓</span>
+                            <span class="year">2020.9 - 2020.11</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">GSS 대시보드/관리자 페이지</span>
+                            <span class="year">2020.11 - 2020.12</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="alert">* 관리자 페이지, 내부 프로젝트, 모바일 어플리케이션, 태플릿 인 앱, TV 인 앱은 링크가 없는 점 양해바랍니다.</div>
+            </div>
+        </div>
     </section>
     <!-- e career 1 -->
 
     <!-- s career 2 -->
-    <section class="section04">
-        <h1>section04</h1>
+    <section class="career">
+        <h2 class="sr-only">career</h2>
+        <div class="inner">
+            <div class="year-info">
+                <div class="heading">more projects</div>
+                <div class="year">2021</div>
+            </div>
+            <div class="work-list">
+                <ul>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Pablo 미술앱</span>
+                            <span class="year">2020.11 - 2021.01</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">ER Bank</span>
+                            <span class="year">2021.1</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">홈런 에코 초등/중등</span>
+                            <span class="year">2020.10 - 2021.2</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">A-cha 민원센터</span>
+                            <span class="year">2021.3</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Enuma LMS</span>
+                            <span class="year">2021.2 - 2021.5</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">LGU+ 아이들나라 4.0</span>
+                            <span class="year">2020.12 - 2021.7</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Enuma KitKit School</span>
+                            <span class="year">2021.10</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">A-cha 하이브리드 앱</span>
+                            <span class="year">2019.12 - 진행중</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Macrogen Web/Mobile</span>
+                            <span class="year">2021.2 - 진행중</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">LG헬로비전 아이들나라 4.0</span>
+                            <span class="year">2021.7 - 진행중</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="alert">* 관리자 페이지, 내부 프로젝트, 모바일 어플리케이션, 태플릿 인 앱, TV 인 앱은 링크가 없는 점 양해바랍니다.</div>
+            </div>
+        </div>
     </section>
     <!-- e career 2 -->
 
     <section class="section05">
-        <h1>section05</h1>
+        <h2 class="sr-only">career</h2>
     </section>
 </div>
+<div class="popup" id="popup">
+    <div class="content">
+        <a href="#">닫기</a>
+        <div class="box">
+            테스트
+        </div>
+    </div>
+</div>
 <script>
+    // $('.work-list a').on('click', function (){
+    //     $('body').addClass('scrollOff');
+    // })
+    //
+    // $('#').on('click', function (){
+    //     $('body').addClass('scrollOff');
+    // })
+
     anime({
         targets: "#bubble-1 path",
         d: [
@@ -201,10 +368,9 @@
                     end: () => "+=" + document.querySelector("#wrap").offsetWidth,
                     pin: true,
                     scrub: 1,
-                    id: "my-id",
                     snap: {
                         snapTo: 1 / (SECTIONS.length - 1),
-                        duration: 0.1,
+                        duration: 0.03,
                         ease: "power0",
                     },
                     value: 100,
@@ -218,7 +384,7 @@
                             $('.pagination-wrap li').eq(0).addClass('active').siblings().removeClass('active');
                         }
                         else if (self.progress > .2 && self.progress < .4) {
-                            $('.section02').addClass('active').siblings().removeClass('active');
+                            $('.profile').addClass('active').siblings().removeClass('active');
                             $('.pagination-wrap li').eq(1).addClass('active').siblings().removeClass('active');
                         }
                         else if (self.progress > .4 && self.progress < .6) {
